# oneSolver

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  COMPILE.md
src/: CMakeLists.txt  mpi-hello-world.cpp  mpi-sycl-hello-pi.cpp
tests/: exhaustive_test.cpp
